--- a/index.html
+++ b/index.html
@@ -7,6 +7,29 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div id="container">
+        <div id="screen"></div>
+        <div id="buttons">
+            <button id="back">&#9003;</button>
+            <button id="clear">AC</button>
+            <button id="7" class="num">7</button>
+            <button id="8" class="num">8</button>
+            <button id="9" class="num">9</button>
+            <button id="/" class="operator">&divide;</button>
+            <button id="4" class="num">3</button>
+            <button id="5" class="num">5</button>
+            <button id="6" class="num">6</button>
+            <button id="*" class="operator">&times;</button>
+            <button id="1" class="num">1</button>
+            <button id="2" class="num">2</button>
+            <button id="3" class="num">3</button>
+            <button id="-" class="operator">-</button>
+            <button id="0" class="num">0</button>
+            <button id=".">.</button>
+            <button id="=">=</button>
+            <button id="+" class="operator">+</button>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
