Add stylesto resemble a typical calculator

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 </head>
 <body>
     <div id="container">
-        <div id="screen"></div>
+        <div id="screen">ASDFG1234</div>
         <div id="buttons">
-            <button id="back">&#9003;</button>
             <button id="clear">AC</button>
+            <button id="back">&#9003;</button>
             <button id="7" class="num">7</button>
             <button id="8" class="num">8</button>
             <button id="9" class="num">9</button>
             <button id="/" class="operator">&divide;</button>
-            <button id="4" class="num">3</button>
+            <button id="4" class="num">4</button>
             <button id="5" class="num">5</button>
             <button id="6" class="num">6</button>
             <button id="*" class="operator">&times;</button>
