--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
         <div id="buttons">
             <button class="clear">AC</button>
             <button class="back">&#9003;</button>
-            <button id="7" class="num">7</button>
-            <button id="8" class="num">8</button>
-            <button id="9" class="num">9</button>
+            <button id="n7" class="num">7</button>
+            <button id="n8" class="num">8</button>
+            <button id="n9" class="num">9</button>
             <button id="divide" class="operator">&divide;</button>
-            <button id="4" class="num">4</button>
-            <button id="5" class="num">5</button>
-            <button id="6" class="num">6</button>
+            <button id="n4" class="num">4</button>
+            <button id="n5" class="num">5</button>
+            <button id="n6" class="num">6</button>
             <button id="multiply" class="operator">&times;</button>
-            <button id="1" class="num">1</button>
-            <button id="2" class="num">2</button>
-            <button id="3" class="num">3</button>
+            <button id="n1" class="num">1</button>
+            <button id="n2" class="num">2</button>
+            <button id="n3" class="num">3</button>
             <button id="subtract" class="operator">-</button>
-            <button id="0" class="num">0</button>
+            <button id="n0" class="num">0</button>
             <button class="point">.</button>
             <button class="equals">=</button>
             <button id="add" class="operator">+</button>
