Add blinking cursor when first opening page

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <h1>THE SIMPLE CALCULATOR</h1>
     <div id="container">
-        <div id="screen">ASDFG1234</div>
+        <div id="screen"><span id="cursor">|</span></div>
         <div id="buttons">
             <button class="clear">AC</button>
             <button class="back">&#9003;</button>
